<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    tools:context=".ui.home.HomeFragment">


    <!--  <View
          android:id="@+id/rectangle_1"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:background="@drawable/ic_baseline_arrow_drop_down_24"
          android:layout_gravity="center"/>-->


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/nextTrips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/nextTrips"
                android:textAppearance="@style/title"
                android:textColor="@color/colorGreyDark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/locationSpinner"
                android:background="@drawable/style_spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAppearance="@style/title"
                app:layout_constraintBottom_toBottomOf="@+id/nextTrips"
                app:layout_constraintStart_toEndOf="@+id/nextTrips"
                app:layout_constraintTop_toTopOf="@+id/nextTrips" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <Button
                    android:id="@+id/btTodas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:background="@color/colorBlack"
                    android:fontFamily="@font/sf_font_pro"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:stateListAnimator="@null"
                    android:text="@string/todas"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btProximoFinde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/sf_font_pro"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:stateListAnimator="@null"
                    android:text="@string/proximofinde"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyNormal"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btBoulder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/sf_font_pro"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:stateListAnimator="@null"
                    android:text="@string/boulder"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyNormal"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btDeportiva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/sf_font_pro"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:stateListAnimator="@null"
                    android:text="@string/deportiva"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyNormal"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btRocodromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/sf_font_pro"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:stateListAnimator="@null"
                    android:text="@string/rocodromo"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyNormal"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btClasica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/sf_font_pro"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:stateListAnimator="@null"
                    android:text="@string/clasica"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyNormal"
                    android:textSize="16sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDescrubre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>